@@ -1,3 +1,12 @@
+2002-10-11  Andrew Lunn  <andrew.lunn@ascom.ch>
+
+	* src/crc32.c (cyg_ether_crc32):
+	* src/crc32.c (cyg_ether_crc32_accumulate): New functions for Ethernet
+	  FCS style CRC calculations.
+	* src/crc32.c (cyg_crc32_accumulate): New function. Continue
+	  an previous CRC calculation into a new buffer.
+	* tests/crc_test.c: Tests for new functions.
+
 2002-08-07  Andrew Lunn  <andrew.lunn@ascom.ch>
 
 	* Created a new package from the CRC routines
